# f18-llvm-project

flang/: CMakeLists.txt  LAPACK-bugs.txt  README.md
flang/cmake/modules/: AddFlang.cmake
flang/include/flang/Common/: Fortran.h  enum-set.h
flang/include/flang/Evaluate/: call.h  expression.h
flang/include/flang/Lower/: AbstractConverter.h  Bridge.h  CallInterface.h  CharRT.h  Coarray.h  ComplexExpr.h  ConvertType.h  FIRBuilder.h  IO.h  IntrinsicCall.h  PFTBuilder.h  Runtime.h  Todo.h  Utils.h
flang/include/flang/Lower/Support/: BoxValue.h
flang/include/flang/Optimizer/CodeGen/: CGPasses.td  CodeGen.h
flang/include/flang/Optimizer/Dialect/: FIRAttr.h  FIRDialect.h  FIROps.h  FIROps.td  FIRType.h
flang/include/flang/Optimizer/Support/: FIRContext.h  FatalError.h  InternalNames.h  KindMapping.h
flang/include/flang/Optimizer/Transforms/: Passes.h  Passes.td
flang/include/flang/Parser/: parse-tree.h
flang/include/flang/Semantics/: symbol.h  tools.h
flang/lib/: CMakeLists.txt
flang/lib/Common/: CMakeLists.txt
flang/lib/Decimal/: CMakeLists.txt  big-radix-floating-point.h  binary-to-decimal.cpp
flang/lib/Evaluate/: CMakeLists.txt  call.cpp  fold-real.cpp  formatting.cpp  intrinsics-library.cpp  tools.cpp  type.cpp
flang/lib/Lower/: Bridge.cpp  CMakeLists.txt  CallInterface.cpp  CharRT.cpp  CharacterExpr.cpp  CharacterRuntime.cpp  Coarray.cpp  ConvertExpr.cpp  ConvertType.cpp  DoLoopHelper.cpp  FIRBuilder.cpp  IO.cpp  IntrinsicCall.cpp  Intrinsics.cpp  Mangler.cpp  OpenACC.cpp  OpenMP.cpp  PFTBuilder.cpp  RTBuilder.h  Runtime.cpp  SymbolMap.h
flang/lib/Optimizer/: CMakeLists.txt  CodeGen.cpp
flang/lib/Optimizer/CodeGen/: CodeGen.cpp  Target.cpp
flang/lib/Optimizer/Dialect/: FIRAttr.cpp  FIRDialect.cpp  FIROps.cpp  FIRType.cpp
flang/lib/Optimizer/Support/: CMakeLists.txt  FIRContext.cpp  InternalNames.cpp  KindMapping.cpp
flang/lib/Optimizer/Transforms/: CMakeLists.txt  Inliner.cpp  RewriteLoop.cpp
flang/lib/Parser/: CMakeLists.txt
flang/lib/Semantics/: CMakeLists.txt  check-acc-structure.cpp  expression.cpp  resolve-names.cpp  tools.cpp
flang/runtime/: CMakeLists.txt  edit-input.cpp  file.cpp  file.h  format-implementation.h  io-api.cpp  io-api.h  io-error.cpp  pgmath.h.inc  unit.cpp
flang/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
flang/test/Examples/: doloopWithFlag.f90  hello.f90
flang/test/Fir/: complex.fir  convert-fold.fir  fir-ops.fir  fir-types.fir
flang/test/Lower/: array-init.f90  array.f90  arraycopy.f90  character-assignment.f90  end-to-end-character-assignment.f90  format.f90  intrinsics.f90  io-stmt03.f90  io-stmt04.f90  omp-barrier.f90  pre-fir-tree01.f90  pre-fir-tree02.f90  pre-fir-tree04.f90  pre-fir-tree05.f90
flang/test/Unit/: lit.cfg.py
flang/tools/: CMakeLists.txt
flang/tools/bbc/: bbc.cpp
flang/tools/f18/: CMakeLists.txt  f18.cpp
flang/tools/tco/: CMakeLists.txt  tco.cpp
flang/unittests/Decimal/: CMakeLists.txt
flang/unittests/Evaluate/: CMakeLists.txt
flang/unittests/Optimizer/: CMakeLists.txt  InternalNamesTest.cpp  KindMappingTest.cpp
llvm/: CMakeLists.txt
llvm/tools/: CMakeLists.txt
mlir/include/mlir/Dialect/LLVMIR/: LLVMDialect.h
mlir/lib/Conversion/StandardToLLVM/: StandardToLLVM.cpp
mlir/lib/IR/: OperationSupport.cpp
